fix bug pin shrinking too much

--- a/assets/src/scss/layout/footer.scss
+++ b/assets/src/scss/layout/footer.scss
@@ -71,6 +71,7 @@ $better-footer-design: false;
     height: 1.2em;
     position: relative;
     top: -0.05em;
+    flex-shrink: 0;
   }
 }
 
